--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,8 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "react-hooks/exhaustive-deps": "off",
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "import/no-anonymous-default-export": "off",
+    "react/display-name": "off"
   }
 }
